# mysite

./: db.sqlite3  pyproject.toml
mysite/: .env  settings.py  urls.py
pages/: urls.py
static/css/: content.css  style.css
templates/: base.html
templates/pages/: index.html
templates/partials/: _footer.html  _navbar.html
